--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.4
-	yarn_mappings=1.16.4+build.7
-	loader_version=0.10.7
+	minecraft_version=1.16.5
+	yarn_mappings=1.16.5+build.3
+	loader_version=0.11.1
+
+	#Fabric api
+	fabric_version=0.30.0+1.16
 
 # Mod Properties
-	mod_version = 1.1.3
+	mod_version = 1.1.4
 	maven_group = tech.dttp
 	archives_base_name = server-simplified
 
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.25.1+build.416-1.16
